# urma_learning

./: README.ch.md  README.md  URMA_Learning_Notes.md  umdk.spec
.本项目已经正式迁移至 AtomGit 平台/: README.md
cam/: README.md
cam/comm_operator/ascend_kernels/FusedDeepMoe/op_host/: fused_deep_moe_infer.cpp
cam/comm_operator/ascend_kernels/pregen/aclnn/: aclnn_fused_deep_moe.cpp
cam/comm_operator/ascend_kernels/scripts/op_host/: CMakeLists.txt
doc/ch/urma/: URMA API Guide.ch.md  URMA QuickStart Guide.ch.md
doc/ch/urpc/: URPC User Guide.ch.md
doc/ch/usock/ums/: UMS User Guide.ch.md
doc/en/urma/: URMA QuickStart Guide.md
doc/en/usock/ums/: UMS User Guide.md
src/cam/: README.md
src/cam/comm_operator/pybind/: functions.h  fused_deep_moe.cpp  get_dispatch_layout.cpp  moe_combine_prefill.cpp  moe_combine_shmem.cpp  moe_dispatch_prefill.cpp  moe_dispatch_shmem.cpp  pybind.cpp  setup.py  utils.h
src/cam/comm_operator/pybind/deep_ep/: CMakeLists.txt  deep_ep.cpp  deep_ep.hpp  pybind_extension.cpp
src/cam/comm_operator/pybind/deep_ep/python/: setup.py
src/cam/comm_operator/pybind/deep_ep/python/deep_ep/: __init__.py  buffer.py
src/cam/comm_operator/pybind/pytorch_extension/: pytorch_npu_helper.hpp
src/cam/examples/: fused_deep_moe_sample.py
src/urma/: CMakeLists.txt
src/urma/hw/: CMakeLists.txt
src/urma/hw/udma/: CMakeLists.txt  udma_u_abi.h  udma_u_buf.c  udma_u_buf.h  udma_u_common.h  udma_u_ctl.c  udma_u_ctrlq_tp.c  udma_u_ctrlq_tp.h  udma_u_db.c  udma_u_db.h  udma_u_hmap.c  udma_u_hmap.h  udma_u_jetty.c  udma_u_jetty.h  udma_u_jfc.c  udma_u_jfc.h  udma_u_jfr.c  udma_u_jfr.h  udma_u_jfs.c  udma_u_jfs.h  udma_u_log.c  udma_u_log.h  udma_u_main.c  udma_u_ops.c  udma_u_ops.h  udma_u_segment.c  udma_u_segment.h  udma_u_tid.c  udma_u_tid.h
src/urma/hw/udma/include/: udma_u_ctl.h
src/urma/hw/udma/kernel_headers/: udma_abi.h
src/urma/lib/urma/bond/: bondp_datapath.c  bondp_provider_ops.c  bondp_segment.c  bondp_types.h
src/urpc/examples/framework/: urpc_framework_example.c
src/urpc/examples/umq/: umq_example_base.c  umq_example_common.c  umq_example_common.h  umq_example_pro.c
src/urpc/framework/: CMakeLists.txt
src/urpc/framework/core/queue/: queue.h
src/urpc/framework/lib/control/: cp.c
src/urpc/framework/lib/datapath/: dp.c
src/urpc/include/umq/: umq_api.h  umq_types.h
src/urpc/tools/perftest/: perftest_latency.c  perftest_latency.h  perftest_qps.c  perftest_util.h
src/urpc/tools/perftest/framework/: urpc_lib_perftest.c  urpc_lib_perftest_latency.c  urpc_lib_perftest_qps.c
src/urpc/tools/perftest/umq/: umq_perftest.c  umq_perftest_latency.c  umq_perftest_param.c  umq_perftest_param.h  umq_perftest_qps.c
src/urpc/umq/: CMakeLists.txt  msg_ring.c  umq_api.c  umq_inner.h  umq_pro_api.c
src/urpc/umq/dfx/: CMakeLists.txt  dfx.c  dfx.h  perf.c  perf.h
src/urpc/umq/qbuf/: CMakeLists.txt  umq_huge_qbuf_pool.c  umq_huge_qbuf_pool.h  umq_qbuf_pool.c  umq_qbuf_pool.h  umq_shm_qbuf_pool.c
src/urpc/umq/umq_ipc/: umq_ipc_impl.c
src/urpc/umq/umq_ub/: CMakeLists.txt  umq_ub.c  umq_ub_imm_data.h  umq_ub_impl.c  umq_ub_impl.h  umq_ub_plus.c
src/urpc/umq/umq_ub/core/: umq_ub_impl.c
src/urpc/umq/umq_ubmm/: CMakeLists.txt  obmem_common.c  umq_ubmm.c  umq_ubmm_impl.c  umq_ubmm_plus.c
src/urpc/util/: CMakeLists.txt  urpc_pool.c  urpc_thread_closure.h
src/usock/ums/kmod/ums/: ums_mod.c  ums_mod.h
test/intergration_test/: README.ch.md  conftest.py
test/intergration_test/test_framework/app/common/: common.c  test_log.c  test_log.h  test_thread_poll.c
test/intergration_test/test_framework/app/dlock/: dlock_app.py  dlock_atom.cpp  dlock_atom.h
test/intergration_test/test_framework/app/umq/: umq_app.py  umq_atom.cpp  umq_atom.h
test/intergration_test/test_framework/app/ums/: ums_app.py  ums_atom.cpp  ums_atom.h
test/intergration_test/test_framework/app/urma/: urma_app.py  urma_atom.c  urma_atom.h
test/intergration_test/test_framework/app/urpc/: urpc_app.py  urpc_lib_atom.cpp  urpc_lib_atom.h
test/intergration_test/test_framework/common/: check_resource.py  constants.py  utils.py
test/intergration_test/test_suites/DLOCK/example/: public.cpp  public.h  public.py
test/intergration_test/test_suites/UMQ/: public.py
test/intergration_test/test_suites/UMQ/test_umq_demo_pro/: test.py  test_case.cpp
test/intergration_test/test_suites/UMQ/test_umq_demo_pro_header/: test.py  test_case.cpp
test/intergration_test/test_suites/UMS/: public.cpp  public.h  public.py
test/intergration_test/test_suites/UMS/test_ums_read_proc_net_ums_addr/: test.py  test_case.cpp  test_ums_read_proc_net_ums_addr.cc  test_ums_read_proc_net_ums_addr.cpp
test/intergration_test/test_suites/UMS/test_ums_read_proc_net_ums_fbk/: test.py  test_case.cpp  test_ums_read_proc_net_ums_fbk.cc  test_ums_read_proc_net_ums_fbk.cpp
test/intergration_test/test_suites/UMS/test_ums_read_proc_net_ums_para_num/: test.py  test_case.cpp  test_ums_read_proc_net_ums_para_num.cc  test_ums_read_proc_net_ums_para_num.cpp
test/intergration_test/test_suites/URMA/: public.py
test/urpc/lib/datapath/: test_dp.cpp  test_io_perf.cpp
(+131 files in other folders)
